--- a/index.html
+++ b/index.html
@@ -12,70 +12,83 @@
   </head>
 
   <body>
-    <div class="header-img"></div>
-    <div class="header">Juliana Gomez</div>
-    <div class="subtitle">Front End Developer</div>
-    <div class="navigation">
-      <div class="nav-item">Acerca de</div>
-      <div class="nav-item">Mis Proyectos</div>
-      <div class="nav-item">Contacto</div>
-    </div>
+    <header>
+      <img src="images/diego.jpg" alt="Diego Iberri" class="header-img"/>
+      <h1 class="header">Diego Iberri</h1>
+      <h2 class="subtitle">Front End Developer</h2>
+      <nav>
+        <ul class="navigation">
+          <li class="nav-item"><a href="">Acerca de</a></li>
+          <li class="nav-item"><a href="">Proyectos</a></li>
+          <li class="nav-item"><a href="">Contacto</a></li>
+        </ul>
+    </nav>
+    </header>
 
-    <div class="intro">
-      Hola! Soy Juliana 👋 Soy Colombo-Canadiense, amo los gatos y tambien crear
-      cosas lindas para la web 😍 Después de estudiar comunicación social y
-      ciencia política en la universidad, trabajé varios años en mercadeo
-      digital hasta que aprendí a programar. Llevo un poco más de tres años
-      enfocándome en front end, específicamente en JavaScript y accesibilidad.
-      Sueño con una web donde todo el mundo pueda participar. Aquí puedes ver
-      algunos de mis proyectos recientes y también puedes contactarme por si
-      quieres hablar de tecnología, accesibilidad o gatos!
-      <div class="social-media">
-        <div>
-          <a href="https://twitter.com/gmzjuliana" target="_blank"
-            ><img src="images/twitter.png"
+    <main>
+      <section>
+        <h2 class="header"> Acerca de</h2>
+        <p class="intro">
+          Hola! Soy Diego 👋, un mexicano, apasionado por la tecnología, el diseño y tambien crear
+          páginas web accesibles para todos los tipos de usuarios😁. Llevo un poco más de un año
+          enfocándome en front-end, específicamente en JavaScript y Accesibilidad.
+        Sueño con una web donde todo el mundo pueda participar. Aquí puedes ver
+        algunos de mis proyectos recientes y también puedes contactarme por si
+        quieres hablar conmigo de tecnología, accesibilidad o diseño!
+        </p>
+        <ul class="social-media">
+        <li>
+          <a href="https://twitter.com/diegooiberri" target="_blank"
+            ><img src="images/twitter.png" alt="twitter"
           /></a>
-        </div>
-        <div>
-          <a href="https://github.com/gmzjuliana" target="_blank"
-            ><img src="images/github-logo.png"
+        </li>
+        <li>
+          <a href="https://github.com/creativoo" target="_blank"
+            ><img src="images/github.png" alt="github"
           /></a>
-        </div>
-        <div>
-          <a href="https://www.linkedin.com/in/gomezjuliana/" target="_blank"
-            ><img src="images/linkedin.png"
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/creativoo/" target="_blank"
+            ><img src="images/linkedin.png" alt="linkedin"
           /></a>
-        </div>
-      </div>
-    </div>
+        </li>
+        </ul>
+      </section>
 
-    <div class="carousel">
-      <div class="arrow arrow-left"></div>
-      <div class="window">
-        <div class="project-container">
-          <div class="project project1"></div>
-          <div class="project project2"></div>
-          <div class="project project3"></div>
-          <div class="project project4"></div>
-          <div class="project project5"></div>
-        </div>
+      <section>
+        <h2 class="header"> Mis Proyectos</h2>
+        <div class="carousel">
+        <div class="arrow arrow-left"></div>
+        <div class="window">
+          <ul class="project-container">
+            <li><button><img class="project project1" src="images/project1.png" alt="proyecto 1" /></button></li>
+            <li><button><img class="project project2" src="images/project2.png" alt="proyecto 2" /></button></li>
+            <li><button><img class="project project3" src="images/project3.png" alt="proyecto 3" /></button></li>
+            <li><button><img class="project project4" src="images/project4.png" alt="proyecto 4" /></button></li>
+            <li><button><img class="project project5" src="images/project1.png" alt="proyecto 5" /></button></li>
+          </ul>
       </div>
       <div class="arrow arrow-right"></div>
-    </div>
+      </div>
+      </section>
+    </main>
 
-    <div class="contact-section">
-      <div class="header">Contacto</div>
-      <div class="form-container">
+
+    <footer class="contact-section">
+      <h2 class="contact">Contacto</h2>
+      <form class="form-container">
         Nombre<input type="text" /> <br />
         Correo<input type="text" /> <br />
         <div class="message-input">Mensaje<input type="text" /> <br /></div>
-        <div class="send-button">Enviar</div>
-      </div>
-    </div>
-    <div class="notification">El formulario fue enviado sin errores</div>
+        <button class="send-button">Enviar</button>
+      </form>
+    </footer>
+
+
+    <div class="notification">El formulario fue enviado exitosamente</div>
     <div class="modal-container">
       <div class="modal">
-        Ejemplo de un proyecto mio
+        Proyecto realizado por un servidor
         <div class="modal-project-image"></div>
       </div>
     </div>
