--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       </section>
 
       <section>
-        <h2 class="header"> Mis Proyectos</h2>
+        <h2 class="header"> Proyectos</h2>
         <div class="carousel">
-        <div class="arrow arrow-left"></div>
+        <div class="arrow arrow-left" aria-label="backward button"></div>
         <div class="window">
           <ul class="project-container">
             <li><button><img class="project project1" src="images/project1.png" alt="proyecto 1" /></button></li>
@@ -68,7 +68,7 @@
             <li><button><img class="project project5" src="images/project1.png" alt="proyecto 5" /></button></li>
           </ul>
       </div>
-      <div class="arrow arrow-right"></div>
+      <div class="arrow arrow-right" aria-label="forward button"></div>
       </div>
       </section>
     </main>
@@ -77,9 +77,9 @@
     <footer class="contact-section">
       <h2 class="contact">Contacto</h2>
       <form class="form-container">
-        Nombre<input type="text" /> <br />
-        Correo<input type="text" /> <br />
-        <div class="message-input">Mensaje<input type="text" /> <br /></div>
+        Nombre<input type="text" aria-label="nombre" /> <br />
+        Correo<input type="text" aria-label="correo"/> <br />
+        <div class="message-input">Mensaje<input type="text" aria-label="mensaje" /> <br /></div>
         <button class="send-button">Enviar</button>
       </form>
     </footer>
