modificando js haciendolo mas accesible

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
       <section>
         <h2 class="header"> Acerca de</h2>
         <p class="intro">
-          Hola! Soy Diego 👋, un mexicano, apasionado por la tecnología, el diseño y tambien crear
-          páginas web accesibles para todos los tipos de usuarios😁. Llevo un poco más de un año
-          enfocándome en front-end, específicamente en JavaScript y Accesibilidad.
-        Sueño con una web donde todo el mundo pueda participar. Aquí puedes ver
-        algunos de mis proyectos recientes y también puedes contactarme por si
-        quieres hablar conmigo de tecnología, accesibilidad o diseño!
+          Hola! Soy Diego 👋, un mexicano apasionado por la tecnología, el diseño y tambien crear
+          páginas web agradables y accesibles para todos los tipos de usuarios😁. Llevo poco más de un año
+          enfocándome en front-end, específicamente en JavaScript y la accesibilidad.
+          Sueño con una web donde todo el mundo pueda participar. Aquí puedes ver
+          algunos de mis proyectos recientes y también puedes contactarme por si
+          quieres hablar conmigo sobre tecnología, accesibilidad o diseño! 😉
         </p>
         <ul class="social-media">
           <li>
@@ -65,17 +65,17 @@
       <section>
         <h2 class="header"> Proyectos</h2>
         <div class="carousel">
-        <div class="arrow arrow-left" aria-label="backward button"></div>
+        <button class="arrow arrow-left" aria-label="backward button"></button>
         <div class="window">
           <ul class="project-container">
-            <li><button><img class="project project1" src="images/project1.png" alt="Proyecto 1"/></button></li>
-            <li><button><img class="project project2" src="images/project2.png" alt="Proyecto 2"/></button></li>
-            <li><button><img class="project project3" src="images/project3.png" alt="Proyecto 3"/></button></li>
-            <li  aria-hidden="true"><button><img class="project project4" src="images/project4.png" alt="Proyecto 4"/></button></li>
-            <li  aria-hidden="true"><button><img class="project project5" src="images/project5.png" alt="Proyecto 5"/></button></li>
+            <li><button class="project1"><img class="project" src="images/project1.png" alt="Proyecto 1"/></button></li>
+            <li><button class="project2"><img class="project" src="images/project2.png" alt="Proyecto 2"/></button></li>
+            <li><button class="project3"><img class="project" src="images/project3.png" alt="Proyecto 3"/></button></li>
+            <li  aria-hidden="true"><button class="project4" tabindex="-1"><img class="project" src="images/project4.png" alt="Proyecto 4"/></button></li>
+            <li  aria-hidden="true"><button class="project5"tabindex="-1"><img class="project" src="images/project5.png" alt="Proyecto 5"/></button></li>
           </ul>
       </div>
-      <div class="arrow arrow-right" aria-label="forward button"></div>
+      <button class="arrow arrow-right" aria-label="forward button"></button>
       </div>
       </section>
     </main>
